objects/ssot__AiAgentSession__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AiAgentChannelType__c</fullName>
        <label>AI Agent Channel Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AiAgentSessionEndType__c</fullName>
        <label>AI Agent Session End Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EndTimestamp__c</fullName>
        <label>End Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalSourceId__c</fullName>
        <label>External Source Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>AI Agent Session Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IndividualId__c</fullName>
        <label>Individual</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PreviousSessionId__c</fullName>
        <label>Previous Session Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedMessagingSessionId__c</fullName>
        <label>Related Messaging Session</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedVoiceCallId__c</fullName>
        <label>Related Voice Call</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SessionOwnerId__c</fullName>
        <label>Session Owner</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SessionOwnerObject__c</fullName>
        <label>Session Owner Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartTimestamp__c</fullName>
        <label>Start Timestamp</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__VariableText__c</fullName>
        <label>Variable</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1744306671250_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AiAgentSession_RelatedVoiceCallId_ma_rel</label>
        <referenceTo>ssot__VoiceCall__dlm</referenceTo>
        <relationshipLabel>AiAgentSession_RelatedVoiceCallId_ma_rel</relationshipLabel>
        <relationshipName>rel_1744306671250_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1744306676932_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AiAgentSession_IndividualId_map_Indi_rel</label>
        <referenceTo>ssot__Individual__dlm</referenceTo>
        <relationshipLabel>AiAgentSession_IndividualId_map_Indi_rel</relationshipLabel>
        <relationshipName>rel_1744306676932_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1750351599719_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AiAgentSession_PreviousSessionId_map_rel</label>
        <referenceTo>ssot__AiAgentSession__dlm</referenceTo>
        <relationshipLabel>AiAgentSession_PreviousSessionId_map_rel</relationshipLabel>
        <relationshipName>rel_1750351599719_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>